--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: swift
 osx_image: xcode11.3
 script:
   - swift package generate-xcodeproj
-  - xcodebuild clean test -project Media.xcodeproj -scheme "Media-Package" -destination "platform=iOS Simulator,name=iPhone 11,OS=13.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet
+  - xcodebuild clean test -destination 'name=iPhone 8' -scheme Media-Package -quiet
