--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: swift
 osx_image: xcode11.3
 script:
   - swift package generate-xcodeproj
-  - xcodebuild clean test -destination 'name=iPhone 8' -scheme Media-Package -quiet
+  - xcodebuild clean test -destination 'name=iPhone 8' -scheme Media-Package -enableCodeCoverage YES -derivedDataPath .build/derivedData -quiet
+after_success:
+  # upload test coverage data
+  - bash <(curl -s https://codecov.io/bash) -J '^MediaCore$' -D .build/derivedData
